# field-demo-enablement

./: .gitignore  README.md
conversational-bi/: README.md
conversational-bi/lab/: conversational-bi-lab.ipynb  setup.sql
conversational-bi/presentations/: conversational-bi-speaker-notes.md  conversational-bi.html
cx-ai-functions/: README.md
cx-ai-functions/lab/: cleanup.sql  cx-ai-functions-extensions.ipynb  cx-ai-functions-lab.ipynb  data_gen.py  setup.sql
cx-ai-functions/presentations/: cx-ai-functions-speaker-notes.md  cx-ai-functions.html
donor-churn-ml/: README.md
donor-churn-ml/agent_optimization/: optimization_log.md
donor-churn-ml/app/: snowflake.yml  streamlit_app.py
donor-churn-ml/lab/: cleanup.sql  donor-churn-01-features.ipynb  donor-churn-02-model.ipynb  donor-churn-03-serve-agent.ipynb  donor-churn-ml-lab.ipynb  setup.sql
donor-churn-ml/presentations/: donor-churn-ml-speaker-notes.md  donor-churn-ml.html
gtm-agents-migration/: README.md
gtm-agents-migration/app/: pyproject.toml  snowflake.yml  streamlit_app.py
gtm-agents-migration/app/.streamlit/: config.toml
gtm-agents-migration/lab/: cleanup.sql  gtm-01-foundation.ipynb  gtm-02-before-mcp.ipynb  gtm-03-after-agents.ipynb  gtm-04-evals.ipynb  setup.sql
gtm-agents-migration/presentations/: gtm-agents-migration-speaker-notes.md  gtm-agents-migration.html
proactive-retail-intelligence/: README.md
proactive-retail-intelligence/agent_optimization/: README.md
proactive-retail-intelligence/lab/: cleanup.sql  setup.sql  (+1 more)
sms-marketing-ai/: README.md  demo_script.md
(+57 files in other folders)
