# Streamlit in Snowflake apps run with a pre-installed version of the Streamlit library.
# To use a different version, add an External Access Integration for PyPI. See the SiS docs.
[project]
name = "gtm-agents-observability"
requires-python = "~=3.11.0"
version = "0.0.1"
description = "Observability & migration command center for the GTM agents demo"
dependencies = [
    "streamlit[snowflake]"
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
streamlit = false
